modified the stop command
